<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_your_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/address_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_your_address"
            android:inputType="textCapWords" />
        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:layout_marginTop="16dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/whipped_cream_checkbox"

            android:text="@string/whipped_cream"
            android:paddingLeft="3dp"
            android:textSize="15sp"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chocolate_checkbox"
            android:text="@string/chocolate"
            android:paddingLeft="3dp"
            android:textSize="15sp"/>
        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:paddingBottom="16dp"
            android:text="@string/textQuantity"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="8dp"
                android:text="@string/minus"
                android:onClick="decrement"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quantity_text_view"
                android:text="@string/Quantity"
                android:textColor="#000000"
                android:textSize="25dp"/>
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/plus"
                android:onClick="increment"
                android:paddingLeft="8dp"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/order"
            />
        <TextView
            android:id="@+id/order_summary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/order_summary_text"
            android:textColor="#000000"
            android:textSize="30sp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:id="@+id/submitOrder"
            android:onClick="submitOrder"/>


    </LinearLayout>


</ScrollView>
